--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cloud_firestore: ^5.6.6
   cupertino_icons: ^1.0.8
   change_app_package_name: ^1.5.0
+  flutter_bloc: ^9.1.0
+  animated_bottom_navigation_bar: ^1.4.0
 
 dev_dependencies:
   flutter_test:
