--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   change_app_package_name: ^1.5.0
   flutter_bloc: ^9.1.0
   animated_bottom_navigation_bar: ^1.4.0
+  video_player: ^2.9.5
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
