--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,19 @@ dependencies:
     sdk: flutter
 
   firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  firebase_storage: ^12.4.5
   cloud_firestore: ^5.6.6
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.0+1
   cupertino_icons: ^1.0.8
   change_app_package_name: ^1.5.0
   flutter_bloc: ^9.1.0
   animated_bottom_navigation_bar: ^1.4.0
   video_player: ^2.9.5
-  visibility_detector: ^0.4.0+2
+  visibility_detector: ^0.4.0
+  intl: ^0.20.2
+  
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +40,8 @@ flutter:
 
  
   uses-material-design: true
+  assets:
+    - assets/image/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
